[tool.poetry]
name = "electronic-shop"
version = "0.1.0"
description = "A simple catalog for buying some electronic devices"
authors = ["Miguel Contreras <migerinesp@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
